fix: unvisible inputs on mobile devices

--- a/assets/scss/components/_interest.scss
+++ b/assets/scss/components/_interest.scss
@@ -121,12 +121,11 @@
         background: linear-gradient(145deg, #ffffff, #dddddd);
         box-shadow:  20px 20px 20px #d0d0d0, -20px -20px 20px #ffffff;
         border: none;
-        transition: 0.2s;
+        -webkit-appearance: none;
         width: 100%;
 
         &:focus {
             background: #f5f5f5;
-            border: 1px solid rgb(226, 226, 226);
             box-shadow: inset 20px 20px 20px #d0d0d0, inset -20px -20px 20px #ffffff;
         }
     }
